--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.56.1",
-    "@types/node": "^24.9.2"
+    "@types/node": "^24.9.2",
+    "dotenv": "^17.2.3"
   }
 }
