--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "test:report": "playwright test && npx allure generate allure-results --clean -o allure-report",
+    "allure:generate": "npx allure generate allure-results --clean -o allure-report",
+    "allure:open": "npx allure open allure-report"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -11,6 +16,8 @@
     "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.9.2",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "allure-playwright": "^2.0.0",
+    "allure-commandline": "^2.13.9"
   }
 }
