--- a/.github/workflows/playwright-gh-pages.yml
+++ b/.github/workflows/playwright-gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --no-audit --no-fund || npm install --no-audit --no-fund
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
@@ -38,4 +38,3 @@ jobs:
           publish_branch: gh-pages
           # Optionally set a custom commit message
           commit_message: "Deploy Playwright report: ${{ github.sha }}"
-
