--- a/.github/workflows/playwright-gh-pages.yml
+++ b/.github/workflows/playwright-gh-pages.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 permissions:
-  contents: read
+  contents: write
   pages: write
 
 jobs:
@@ -19,6 +19,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -42,7 +45,8 @@ jobs:
       - name: Publish Playwright HTML report to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # Use a repo-level PAT if provided as secret GH_PAGES_TOKEN, otherwise fall back to the default GITHUB_TOKEN
+          github_token: ${{ secrets.GH_PAGES_TOKEN || secrets.GITHUB_TOKEN }}
           publish_dir: ./playwright-report
           publish_branch: gh-pages
           # Optionally set a custom commit message
