--- a/.github/workflows/playwright-gh-pages.yml
+++ b/.github/workflows/playwright-gh-pages.yml
@@ -42,6 +42,27 @@ jobs:
       - name: Run Playwright tests (produce Allure results)
         run: npx playwright test
 
+      - name: Copy categories to allure-results
+        run: cp categories.json allure-results/categories.json
+
+      - name: Download previous Allure history from gh-pages
+        continue-on-error: true
+        run: |
+          # Download the previous report to extract history
+          mkdir -p allure-history
+          git fetch origin gh-pages
+          git checkout origin/gh-pages -- allure-report/history || echo "No previous history found"
+          if [ -d "allure-report/history" ]; then
+            cp -r allure-report/history/* allure-history/
+          fi
+
+      - name: Copy history to allure-results
+        continue-on-error: true
+        run: |
+          if [ -d "allure-history" ]; then
+            cp -r allure-history allure-results/history
+          fi
+
       - name: Generate Allure HTML report
         run: |
           # Remove old report if exists to ensure clean generation
@@ -50,6 +71,7 @@ jobs:
           npx allure generate allure-results -o allure-report
           # Verify report was generated
           ls -la allure-report/data
+          ls -la allure-report/history || echo "No history yet"
 
       - name: Publish Allure HTML report to gh-pages
         uses: peaceiris/actions-gh-pages@v3
