♻️ Retirada de yml obsoleto

--- a/.github/workflows/testes-e-publicacao-gh-pages.yml
+++ b/.github/workflows/testes-e-publicacao-gh-pages.yml
@@ -1,4 +1,4 @@
-name: Playwright tests and publish report
+name: Testes E2E SWAG LABS com Playwright e Publicação do Relatório Allure no GitHub Pages.
 
 on:
   push:
